# quiz

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  t.py
cert/: server.crt  server.key
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Option.tsx
services/traefik/: traefik.yml
src/: asgi.py  bot.py  db.py  settings.py  yoyo.ini
src/quiz/: entity.py  fastapi.py  repository.py  service.py
src/quiz/migrations/: 20230219_01_uKxaq-initital.py  20230219_02_fg5Vn-user-exercise.py  20230219_03_2tw3C-draft-table.py  20230318_01_pD3fU-add-username-to-user.py  20230318_02_P7fE9-make-username-required.py
src/static/: task.html
